--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -1,8 +1,34 @@
 <header class="header">
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                HEADER
+            <div class="col-12 d-flex align-items-center justify-content-between">
+                <div class="header__logo">
+                    <img src="img/header-logo.svg" alt="img">
+                </div>
+                <nav class="header__nav d-flex align-items-center">
+                    <ul class="d-flex">
+                        <li class="nav__item">
+                            <a class="header__link" href="#">Каталог</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="header__link" href="#">Виробництво</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="header__btn" href="#">Створити свій</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="header__btn" href="#">Обрати дизайн</a>
+                        </li>
+                    </ul>
+                    <div class="header__burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="header__basket ps-2">
+                        <img src="img/header-bag.svg" alt="img">
+                    </div>
+                </nav>
             </div>
         </div>
     </div>
