--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -20,11 +20,30 @@
                             <a class="header__btn" href="#">Обрати дизайн</a>
                         </li>
                     </ul>
-                    <div class="header__burger">
+                    <div class="header__burger d-block d-lg-none acnive">
                         <span></span>
                         <span></span>
                         <span></span>
                     </div>
+                    <!-- <div class="mobile">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12">
+                                    <nav class="mobile__nav">
+                                        <ul class="d-flex flex-column align-items-center justify-content-center">
+                                            <li>
+                                                <a href="#">Каталог</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Виробництво</a>
+                                            </li>
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
+                        </div>
+                
+                    </div> -->
                     <div class="header__basket ps-2">
                         <img src="img/header-bag.svg" alt="img">
                     </div>
