--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -3,6 +3,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="hero__backgound">
+                   <img src="img/hero-img.svg" alt="">
                 </div>
                 <div class="hero__title">
                     АРМІЙСЬКИЙ ЖЕТОН
@@ -17,6 +18,7 @@
                     <a class="border-btn" href="#">Обрати дизайн</a>
                 </div>
                 <div class="hero__img"></div>
+                
             </div>
         </div>
     </div>
