--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -2,52 +2,34 @@
     <div class="container">
         <div class="row">
             <div class="col-12 d-flex align-items-center justify-content-between">
-                <div class="header__logo">
-                    <img src="img/header-logo.svg" alt="img">
+                <div class="col-3">
+                    <div class="header__logo">
+                        <img src="../img/header-logo.svg" alt="img">
+                    </div>
                 </div>
-                <nav class="header__nav d-flex align-items-center">
-                    <ul class="d-flex">
-                        <li class="nav__item">
-                            <a class="header__link" href="#">Каталог</a>
-                        </li>
-                        <li class="nav__item">
-                            <a class="header__link" href="#">Виробництво</a>
-                        </li>
-                        <li class="nav__item">
-                            <a class="header__btn" href="#">Створити свій</a>
-                        </li>
-                        <li class="nav__item">
-                            <a class="header__btn" href="#">Обрати дизайн</a>
-                        </li>
-                    </ul>
-                    <div class="header__burger d-block d-lg-none acnive">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <!-- <div class="mobile">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-12">
-                                    <nav class="mobile__nav">
-                                        <ul class="d-flex flex-column align-items-center justify-content-center">
-                                            <li>
-                                                <a href="#">Каталог</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Виробництво</a>
-                                            </li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
+                <div class="col-9 d-flex justify-content-end">
+                    <nav class="header__nav d-flex align-items-center">
+                        <ul class="header__menu d-flex">
+                            <li class="header__item">
+                                <a class="header__link" href="#">Каталог</a>
+                            </li>
+                            <li class="header__item">
+                                <a class="header__link" href="#">Виробництво</a>
+                            </li>
+                            <li class="header__item">
+                                <a class="header__btn" href="#">Створити свій</a>
+                            </li>
+                            <li class="header__item">
+                                <a class="header__btn" href="#">Обрати дизайн</a>
+                            </li>
+                        </ul>
+                        
+                        <div class="header__basket ps-2">
+                            <img src="img/header-bag.svg" alt="img">
                         </div>
-                
-                    </div> -->
-                    <div class="header__basket ps-2">
-                        <img src="img/header-bag.svg" alt="img">
-                    </div>
-                </nav>
+                    </nav>
+                </div>
+
             </div>
         </div>
     </div>
