--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero__backgound {
-    background-image: url(/img/hero-img.jpg);
+    background-image: url('/img/hero-img.jpg');
     max-width: 100%;
     height: 682px;
     background-position: 0 0;
